--- a/index.Rmd
+++ b/index.Rmd
@@ -68,6 +68,8 @@ my_datatable <- function(data, filename) {
     filter = 'top',
     extensions = 'Buttons',
     options = list(
+      autoWidth=TRUE,
+      columnDefs = list(list(width = '100px', targets = c('Gene'))),
       dom = 'rtipB',
       buttons = list(
         list(extend = 'csv',  filename=filename),
@@ -116,7 +118,7 @@ curr_ver <- all_lists$version[1]
 ```{r datatables, results='asis', eval=FALSE}
 
 all_lists %>% 
-  filter(version == ver) %>% 
+  filter(version == curr_ver) %>% 
   select(data) %>% 
   unnest(data) %>% 
   add_urls() %>% 
@@ -243,5 +245,7 @@ all_lists %>%
 ## Cite
 If you use this Genes4Epilepsy resource, please acknowledge by citing:  
 [Oliver KL, Scheffer IE, Bennett MF, Grinton BE, Bahlo M, Berkovic SF. Genes4Epilepsy: An epilepsy gene resource. Epilepsia. 2023 Feb 21. doi: 10.1111/epi.17547. Epub ahead of print. PMID: 36808730](https://onlinelibrary.wiley.com/doi/10.1111/epi.17547)
+
+This webpage developed by [Jacob E. Munro](https://orcid.org/0000-0002-2751-0989)
 
   
