--- a/index.Rmd
+++ b/index.Rmd
@@ -89,7 +89,8 @@ all_lists <-
   tibble(
     filename = list.files('.', pattern = 'EpilepsyGenes_v.*.tsv', full.names = T),
     version = str_extract(filename, 'v\\d{4}-\\d{2}(?=.tsv)')) %>% 
-  arrange(desc(version))%>% 
+  filter(!is.na(version)) %>% 
+  arrange(desc(version)) %>% 
   mutate(data = map(filename, 
                     read_tsv,
                     col_types = cols(
@@ -140,7 +141,7 @@ panel_app <-
   select(id, version) %>% 
   filter(id %in% c('PAA:202', 'PAE:402')) %>% 
   pmap_df(function(id, version) {
-    cavalier::get_panelapp_gene_list(id, version = version, min_confidence = 0L)
+    cavalier::get_panelapp_panel(id, version = version)
   }) %>% 
   mutate(
     text = if_else(list_id == 'PAA:202',
@@ -149,7 +150,7 @@ panel_app <-
     url = str_c(
       '<a href = "',
       if_else(list_id == 'PAA:202', 
-              'https://panelapp.agha.umccr.org/panels/202/gene/',
+              'https://panelapp-aus.org/panels/202/gene/',
               'https://panelapp.genomicsengland.co.uk/panels/402/gene/'),
       panelapp_symbol,
       '" target="_blank">',
